# web-rwkv-axum

./: .gitignore  Cargo.toml  config.toml  readme.md
docs/: .markdownlint.jsonc  echo.md  readme.md
docs/api/: echo.md  readme.md
docs/components/: Sampler.md  Transformer.md  readme.md
docs/infer/: infer.md  readme.md
docs/normalizers/: copy_normalizer.md  create_normalizer.md  delete_normalizer.md  readme.md  reset_normalizer.md
docs/pipeline/: copy_pipeline.md  create_pipeline.md  delete_pipeline.md  modify_pipeline.md  readme.md  reset_pipeline.md
docs/pipeline/normalizers/: classifier_free_guidance.md
docs/pipeline/samplers/: nucleus.md
docs/pipeline/terminals/: until.md
docs/pipeline/transformers/: global_penalty.md  logits_compressor.md  sliding_penalty.md
docs/samplers/: copy_sampler.md  create_sampler.md  delete_sampler.md  readme.md  reset_sampler.md  update_sampler.md
docs/samplers/types/: typical.md
docs/states/: copy_state.md  create_state.md  delete_dump.md  delete_state.md  dump_state.md  readme.md  reset_state.md  update_state.md
docs/terminals/: copy_terminal.md  create_terminal.md  delete_terminal.md  readme.md
docs/terminals/types/: lengthed.md  until.md
docs/transformers/: copy_transformer.md  create_transformer.md  delete_transformer.md  readme.md  reset_transformer.md  update_transformer.md
docs/transformers/types/: bnf_grammar.md
src/: app.rs  cli.rs  config.rs  helper.rs  lib.rs  macros.rs  main.rs
src/commands/: handle_infer.rs  handle_normalizers.rs  handle_pipeline.rs  handle_samplers.rs  handle_states.rs  handle_terminals.rs  handle_transformers.rs  helpers.rs  mod.rs  types.rs
src/components/: infer.rs  mod.rs  model.rs  permit.rs  serde.rs  softmax.rs
src/components/infer/: mod.rs  reset.rs  state.rs  tokens.rs  updates.rs
src/components/normalizer/: classifier_free_guidance.rs  mod.rs  types.rs
src/components/pipeline/: mod.rs  mutate.rs  pipeline.rs
src/components/sampler/: mod.rs  nucleus.rs  test.rs  types.rs  typical.rs  utils.rs
src/components/state/: mod.rs  pool.rs  serde.rs  state.rs
src/components/state_new/: mod.rs  pool.rs  state.rs
src/components/terminal/: lengthed.rs  mod.rs  types.rs  until.rs
src/components/transformer/: bnf_constraint.rs  disable_tokens.rs  global_penalty.rs  logits_compressor.rs  mod.rs  sliding_penalty.rs  types.rs
src/routes/: hello.html  hello_world.rs  mod.rs  ws.rs
src/states/: infer.rs  mod.rs  pipeline.rs  softmax.rs
src/states/penalty/: mod.rs  types.rs
src/states/sampler/: mod.rs  types.rs  typical.rs
src/states/transformer/: bnf_constraint.rs  global_penalty.rs  mod.rs  types.rs
tests/: commands.sh  curl_ws.py  test_load_config.rs  test_parse_config.rs  test_parse_config.toml
web-rwkv-axum-py/web_rwkv_axum/: api.py
web-rwkv-axum-py/web_rwkv_axum/components/: states.py  transformers.py
wra-py/: MANIFEST.in  setup.py
wra-py/tests/: test.md  test_markdown.py  test_mdast.py  test_pipeline.py  test_schema.py  test_states.py
wra-py/web_rwkv_axum/: api.py  helper.py  model.py
wra-py/web_rwkv_axum/builders/: bnf.py  bnf_schema.py  samplers.py  terminals.py  transformers.py
wra-py/web_rwkv_axum/builders/blocks/: json_blocks.py  md_blocks.py  special.py
wra-py/web_rwkv_axum/builders/schemas/: md_schema.py  (+1 more)
wra-py/web_rwkv_axum/components/: infer.py  pipeline.py  samplers.py  states.py  terminals.py  transformers.py
wra-py/web_rwkv_axum/typed/: bnf.py  json.py  markdown.py  typetools.py
