[package]
description = "A websocket backend for web-rwkv written in Axum."
edition = "2021"
name = "web-rwkv-axum"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = {version = "0.6.20", features = ["ws"]}
bit-set = "0.5.3"
bnf_sampler = "0.3.0"
bson = "2.7.0"
clap = {version = "4.4.1", features = ["derive"]}
dashmap = {version = "5.5.3", features = ["rayon", "serde"]}
fastrand = "2.0.0"
futures = "0.3.28"
futures-util = "0.3.28"
itertools = "0.11.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
memmap2 = "0.7.1"
ndarray = { version = "0.15.6", features = ["serde", "rayon", "blas"] }
num_cpus = "1.16.0"
qp-trie = "0.8.1"
rayon = "1.7.0"
rhai = {version = "1.15.1", features = ["serde", "serde_json"]}
rustc-hash = "1.1.0"
serde = "1.0.188"
serde_json = "1.0.105"
tokio = {version = "1.32.0", features = ["full"]}
toml = "0.7.6"
web-rwkv = {git = 'https://github.com/cryscan/web-rwkv'}

[profile.release]
lto = true

[lib]
name = "web_rwkv_axum"
path = "src/lib.rs"

[[bin]]
name = "web-rwkv-axum"
path = "src/main.rs"
