[package]
description = "A websocket backend for web-rwkv written in Axum."
edition = "2021"
name = "web-rwkv-axum"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["ws"] }
bit-set = "0.5.3"
bnf_sampler = "0.3.5"
clap = { version = "4.4.1", features = ["derive"] }
console-subscriber = "0.2.0"
faer = { version = "0.13.5", features = ["ndarray"] }
fastrand = "2.0.0"
futures = "0.3.28"
futures-util = "0.3.28"
half = "2.2"
itertools = "0.11.0"
lazy_static = "1.4.0"
lru = "0.12.0"
maplit = "1.0.2"
memmap2 = "0.7.1"
ndarray = { version = "0.15.6", features = ["serde", "rayon", "blas"] }
nohash-hasher = "0.2.0"
num_cpus = "1.16.0"
ordered-float = "3.9.1"
qp-trie = "0.8.1"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
safetensors = "0.4"
serde = "1.0.188"
serde_cbor = "0.11.2"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.10"
web-rwkv = "0.6.22"

[profile.release]
panic = "abort"

[lib]
name = "web_rwkv_axum"
path = "src/lib.rs"

[[bin]]
name = "web-rwkv-axum"
path = "src/main.rs"
